# university-os-labs

./: .gitignore  README.md
Lab1/: CMakeLists.txt  main.c
Lab1Var1/: CMakeLists.txt  main.c
Lab1Var1/supplementary/: trialfuncs.c
Lab2/: Summary-Processes  Summary-Results  install_unix.html  scheduling.conf  user_guide.html
Lab2/main/: Common.java  Process.java  ProcessTimeEstimate.java  Results.java  Scheduling.java  SchedulingAlgorithm.java  sProcess.java
